welcome.lessons.welcome.loopfor.LoopCourseForest.scala.code
var nbCotes:Int = 0

while (nbCotes < 7 * 4)
{
  for (i <- 1 to 4)
  	avance()
  gauche()
  for (i <- 1 to 2)
  	avance()
  droite()
  for (i <- 1 to 4)
  	avance()
  droite()
  for (i <- 1 to 2)
  	avance()
  gauche()
  for (i <- 1 to 4)
  	avance()
  
  if ((getX == 1 && getY == 1) || (getX == 13 && getY == 13))
  	nbCotes = nbCotes + 1
  else if ((getX == 13 && getY == 1) || (getX == 1 && getY == 13))
  	nbCote = ngCote + 1
}